Move API header under Apache licence
Also improved
- Cmake script. Add install step
- Rename to use "custom_" prefix

Signed-off-by: Alexander Peskov <peskovnn@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,12 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(TARGET macho_dyld)
 
-add_definitions(-DUNSIGN_TOLERANT=1)
-
 FILE(GLOB SRC src/*.cpp)
 FILE(GLOB HDR include/*.h src/*.h)
 
-add_library(${TARGET} SHARED ${SRC} ${HDR})
-
+add_library(${TARGET} STATIC ${SRC} ${HDR})
 target_include_directories(${TARGET} PUBLIC "include")
+set_target_properties(${TARGET} PROPERTIES PUBLIC_HEADER include/custom_dlfcn.h)
+target_compile_definitions(${TARGET} PRIVATE UNSIGN_TOLERANT=1)
+
+install(TARGETS macho_dyld)
